correcion de un a-link

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                             </form>
                         </div>
             </div>
-            <a href="../pages/Contacto.html" class="btn btn-outline-secondary btn-lg d-flex justify-content-center text-secondary">Read
+            <a href="./pages/Contacto.html" class="btn btn-outline-secondary btn-lg d-flex justify-content-center text-secondary">Read
                 More</a>
         </div>
     </section>
